force-app/main/default/objects/CJFW_ContractDepreciationRequest__c/CJFW_ContractDepreciationRequest__c.object-meta.xml
<CustomObject>
    <description>[P2] 매출채권 - 약정 감가 신청</description>
    <label>약정 감가 신청</label>
    <nameField>
        <displayFormat>CD{YY}{MM}{DD}{000000}</displayFormat>
        <label>Auto No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>