force-app/main/default/objects/CJFW_ContractDepreciationRequest__c/fields/ContractDepreciationStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDepreciationStartDate__c</fullName>
    <description>약정 감가 시작일</description>
    <label>Contract Depreciation Start Date</label>
    <type>Date</type>
</CustomField>