force-app/main/default/objects/CJFW_ContractDepreciationRequest__c/fields/FM_HeadOffice__c.field-meta.xml
<CustomField>
    <fullName>FM_HeadOffice__c</fullName>
    <formula>Customer__r.Owner.HeadOfficeLabel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head Office</label>
    <type>Text</type>
</CustomField>