force-app/main/default/objects/CJFW_ContractDepreciationRequest__c/fields/FM_MA__c.field-meta.xml
<CustomField>
    <fullName>FM_MA__c</fullName>
    <formula>&quot;(&quot; + Customer__r.Owner.EmployeeNo__c + &quot;) &quot; + HYPERLINK( Customer__r.Owner.Id , Customer__r.Owner.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MA</label>
    <type>Text</type>
</CustomField>