force-app/main/default/objects/CJFW_ContractDepreciationRequest__c/fields/FM_SU__c.field-meta.xml
<CustomField>
    <fullName>FM_SU__c</fullName>
    <formula>Customer__r.Owner.SULabel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SU</label>
    <type>Text</type>
</CustomField>