force-app/main/default/objects/CJFW_ContractDepreciationRequest__c/fields/TargetSalesPeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>TargetSalesPeriodEnd__c</fullName>
    <description>대상 매출 기간 To</description>
    <label>Target Sales Period End</label>
    <type>Date</type>
</CustomField>