force-app/main/default/objects/CJFW_ContractDepreciationRequest__c/fields/TargetSalesPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>TargetSalesPeriodStart__c</fullName>
    <description>대상 매출 기간 From</description>
    <label>Target Sales Period Start</label>
    <type>Date</type>
</CustomField>