force-app/main/default/objects/CJFW_ContractDepreciationRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FM_CodeCustomer__c</columns>
    <columns>FM_HeadOffice__c</columns>
    <columns>FM_SU__c</columns>
    <columns>FM_Team__c</columns>
    <columns>FM_MA__c</columns>
    <columns>ContractDepreciationStartDate__c</columns>
    <columns>TargetSalesPeriodStart__c</columns>
    <columns>TargetSalesPeriodEnd__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>